--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 body {
     background-color: #f8c4d0;
     background-size: cover;
-    font-family: 'Comic Sans MS', cursive, sans-serif;
+    font-family: 'Comic Sans MS';
     text-align: center;
     padding: 50px;
     margin: 0;
